--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,14 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build docs
-        run: ./build.sh
+        run: sh ./build.sh
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
           name: docs-v6
           path: dist/v6/site
-          
+
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
