--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: build docs
         run: sh ./build.sh
+        shell: sh
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
